# dotfiles

./: .config  .envrc  .gitignore  .gitmodules  .mcp.json.example  CLAUDE.md  Dockerfile.example  README.md  claude.md  flake.nix  install.sh
Autodesk/: FusionFabrication.FusionNesting
config/: Brewfile  mise-linux.toml  packages.linux.alpine.txt  packages.linux.apt.txt  packages.npm.txt  pixi-packages.txt  tools.linux.bash
configstore/: update-notifier-firebase-tools.json
docs/: 1password-integration.md  INDEX.md  agent-plan.md  claude-beacon.md  claude-development.md  claude-fallback.md  claude-neovim.md  claude-notification.md  claude-skills.md  clipboard.md  database.md  dev-gateway.md  ghostty.md  git-config.md  install-no-sudo.md  install.md  modern-cli-tools.md  neovim-troubleshooting.md  neovim.md  nix-migration-phase0-results.md  nix-migration-plan.md  opensessions.md  pi.md  ralph-crew.md  ralph-schedule.md  ralph.md  rcon-setup.md  rcon.md  sesh.md  setup-new-environment.md  sketchybar-aerospace.md  starship.md  tmux.md  zsh-startup-optimization.md
fish/: config.fish
gh/: hosts.yml
ghc/: ghci_history
iterm2/: AppSupport
lazygit/: config.yaml
nix/: README.md
nvim/: init.lua  lazy-lock.json  lazyvim.json
org.qgroundcontrol/: QGroundControl.ini
scripts/: ai-notify.sh  apt.sh  beacon  beacon.sh  brew.sh  ccusage-schedule  ccusage-snapshot  check-markdown-links.py  cs  gf  (+96 more)
tools/ai-usage/: Cargo.toml
tools/ai-usage/src/: cache.rs  http.rs  main.rs  render.rs
tools/ai-usage/src/providers/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
(+544 files in other folders)
