[package]
name = "ai-usage"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
jiff = "0.2.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
